--- a/app/package.json
+++ b/app/package.json
@@ -23,7 +23,6 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "concurrently": "^5.3.0",
-    "electron": "^10.1.2",
-    "vue-template-compiler": "^2.6.11"
+    "electron": "^10.1.2"
   }
 }
