--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,8 @@
     "core-js": "^3.6.5",
     "less": "^3.12.2",
     "less-loader": "^7.0.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
